--- a/gallerysite/Web.config
+++ b/gallerysite/Web.config
@@ -11,6 +11,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="galleryDb" connectionString="server=.;database=g2;Integrated Security=SSPI;"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
