--- a/JakeBladt.GalleryTools.DAC/JakeBladt.GalleryTools.DAC.csproj
+++ b/JakeBladt.GalleryTools.DAC/JakeBladt.GalleryTools.DAC.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbManager.cs" />
     <Compile Include="Subject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
