--- a/gallerysite/gallerysite.csproj
+++ b/gallerysite/gallerysite.csproj
@@ -133,7 +133,7 @@
     <Compile Include="api\ViewModels\MigrationStatusViewModel.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\GalleryApiController.cs" />
+    <Compile Include="api\Controllers\GalleryApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
