--- a/gallerysite/Web.config
+++ b/gallerysite/Web.config
@@ -10,7 +10,7 @@
     <add key="PreserveLoginUrl" value="true"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="SubjectDirectoryRoot" value="G:\shared_root\jake\bulk\regal\bins\cast\subjects"/>
+    <add key="subjectDirectoryRoot" value="G:\shared_root\jake\bulk\regal\bins\cast\subjects"/>
   </appSettings>
   <connectionStrings>
     <add name="galleryDb" connectionString="server=.;database=g2;Integrated Security=SSPI;"/>
